--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
           # 等待服务启动完成
           sleep 5
 
-      - name: Run integration tests
+      - name: Run test cases
         env:
           ENV: "TEST"
           JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY_TEST }}
@@ -62,7 +62,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
-
+    needs: test
     steps:
     # 1️⃣ 拉取仓库源码
     - name: Checkout code
@@ -90,3 +90,37 @@ jobs:
     - name: Push Docker image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/hulio-user:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Start SSH agent
+        uses: webfactory/ssh-agent@v0.8.1
+        with:
+          ssh-private-key: ${{ secrets.DO_SSH_KEY }}
+
+      - name: Deploy to DigitalOcean
+        env:
+          MYSQL_DSN_PROD: ${{ secrets.MYSQL_DSN_PROD }}
+          JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
+        run: |
+          ssh -o StrictHostKeyChecking=no root@152.42.206.237 << 'EOF'
+            # 拉取最新镜像
+            docker pull hulio-user:latest
+
+            # 停掉旧容器
+            docker rm -f hulio-user || true
+
+            # 启动新容器并注入环境变量
+            docker run -d \
+              --name hulio-user \
+              -p 8080:8080 \
+              -e ENV=PROD \
+              -e MYSQL_DSN_PROD="${MYSQL_DSN_PROD}" \
+              -e JWT_PRIVATE_KEY="${JWT_PRIVATE_KEY}" \
+              hulio-user:latest
+          EOF
